feat: proxy bearer token (#74)
* chore: preserve openapi endpoints order

* chore: preserve openapi endpoints order

* feat(proxy): add bearer token

* feat(proxy): add bearer token

* feat(proxy): add bearer token
